fix(modal): dont wrap image content direct images

--- a/src/definitions/modules/modal.less
+++ b/src/definitions/modules/modal.less
@@ -116,7 +116,6 @@
 .ui.modal > .image.content {
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap;
 }
 
 /* Image */
